Added 'professional photographer'
Added professional photographer to title area.

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
             <h1>
                 National Art Studio
             </h1>
+	    <h3>
+                Professional Photographers
+            </h3>
             <h3>
                 Willesden Green, London
             </h3>
